# ComputerVision-Notebook

./: README.md
BreakoutRoom_HarrisCornerDetection/BreakoutRoom_HarrisCornerDetection/: main.cpp
BreakoutRoom_HarrisCornerDetection/BreakoutRoom_HarrisCornerDetection.xcodeproj/: project.pbxproj
Breakoutroom_Oct21/: PartA.cpp  PartB.cpp
Breakoutroom_Oct21/Breakoutroom_Oct21/: main.cpp
Breakoutroom_Oct21/Breakoutroom_Oct21.xcodeproj/: project.pbxproj
CV_HW5/: CMakeLists.txt
CV_Project1/CV_Project1/: Kernel.h  main.cpp
CV_Project1/CV_Project1.xcodeproj/: project.pbxproj
CV_Project2/CV_Project2/: FeatureDescription.cpp  FeatureDetection.cpp  FeatureMatching.cpp  main.cpp
CV_Project2/CV_Project2.xcodeproj/: project.pbxproj
CV_Project3/: Project-3 Report.docx  ~$oject-3 Report.docx
CannyEdgeDetection/CannyEdgeDetection.xcodeproj/: project.pbxproj
ColorChannels_DataTypes/: displayGreenApple.cpp  invertChannel.cpp
ComputerVisionTemp/ComputerVisionTemp/: main.cpp
ComputerVisionTemp/ComputerVisionTemp.xcodeproj/: project.pbxproj
CornerDetection/: info.plist
CornerDetection/CornerDetection/: main.cpp
CornerDetection/CornerDetection.xcodeproj/: project.pbxproj
EpipolarLines/EpipolarLines.xcodeproj/: project.pbxproj
HW4/: beans.tiff  graypattern.tiff
MakeThis/: MakeThis.cpp
Nov2_BreakoutRoom/: BreakoutRoom2.cpp  Nov2-BreakoutRoom1.docx  Nov2-Breakoutroom2.docx
Nov4-Breakoutroom/: info.plist
Nov9_OpticalFlow/: info.plist
PA01-ReportAndCode/: Project 1 Preliminary Plan.docx
PA02/: main.cpp
openCVProject1/: CMakeLists.txt
(+123 files in other folders)
