cmake_minimum_required(VERSION 3.15)
project(CV_HW5)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
find_package(OpenCV REQUIRED)
set(SOURCE_FILES main.cpp)
add_executable(CV_HW5 main.cpp)
include_directories(${OpenCV_INCLUDE_DIRS})
target_link_libraries(CV_HW5 ${OpenCV_LIBS})